--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -83,11 +83,11 @@
                 <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A landing page for the fictional Study Habits Hero application.</p>
                 <nav class="nav">
                     <ul class="main-link">
-                        <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
+                        <li><a href="responsive-web-design/landing-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
-                        <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
-                        <li><a href="#"><i class="fas fa-lightbulb"></i> Notes</a></li>
+                        <li><a href="https://github.com/anotherleo/leo-projects/tree/main/studies/freecodecamp/responsive-web-design/landing-page"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
+                        <li><a href="responsive-web-design/landing-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
             </article>
@@ -112,14 +112,14 @@
                 <header>
                     <h4>Personal Portfolio</h4>
                 </header>
-                <p class="quest"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a personal portfolio page that has <a href="https://codepen.io/freeCodeCamp/full/zNBOYG">this</a> functionality.</p>
-                <nav>
+                <p class="quest-done"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a personal portfolio page that has <a href="https://codepen.io/freeCodeCamp/full/zNBOYG">this</a> functionality.</p>
+                <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A personal portfolio, sort of...</p>
+                <nav class="nav">
                     <ul class="main-link">
                         <li><a href="responsive-web-design/portfolio-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
-                    </ul>
-                    <ul class="secondary-link">
-                        <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
-                        <li><a href="#"><i class="fas fa-lightbulb"></i> Notes</a></li>
+                    <ul>
+                        <li><a href="https://github.com/anotherleo/leo-projects/tree/main/studies/freecodecamp/responsive-web-design/portfolio-page"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
+                        <li><a href="responsive-web-design/portfolio-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
             </article>
