--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -117,7 +117,8 @@
                 <nav class="nav">
                     <ul class="main-link">
                         <li><a href="responsive-web-design/portfolio-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
-                    <ul>
+                    </ul>
+                    <ul class="secondary-link">
                         <li><a href="https://github.com/anotherleo/leo-projects/tree/main/studies/freecodecamp/responsive-web-design/portfolio-page"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
                         <li><a href="responsive-web-design/portfolio-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
