oh boy, very first real vue project.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 
+    <style>
+        body {font-family: sans-serif; text-align: center}
+        ul {padding: 0;}
+        li {list-style-type: none;}
+        a {text-decoration: none;}
+    </style>
+
     <h1>Leo's Projects</h1>
 
     <nav>
