--- a/studies/freecodecamp/responsive-web-design/technical-doc-page/index.html
+++ b/studies/freecodecamp/responsive-web-design/technical-doc-page/index.html
@@ -15,96 +15,114 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js" defer></script>
 
     <title>Tech. Doc. Boilerplate</title>
+</head>
+
 <body>
-    <header>
+
+    <header class="title-container">
         <h1>Technical Documentation Boilerplate</h1>
     </header>
 
-    <nav>
-
-    </nav>
-
-    <main id="main-doc">
-        <section id="lorem_ipsum_dolor" class="main-section">
+    <div class="content-wrapper">
+        <nav id="navbar" class="main-navbar">
             <header>
-                <h2>lorem ipsum dolor</h2>
+                <h2>Technical Documentation Boilerplate</h2>
             </header>
-
-            <article>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, corrupti excepturi. Consequuntur, natus? Explicabo, vitae placeat. Laudantium, ut assumenda eum molestiae nostrum voluptas iure voluptates odit. Voluptates blanditiis facilis illum.</p>
-                <p>A ipsa enim facere cum quasi dignissimos! Rerum consequatur corrupti porro unde atque fugit repellendus veniam accusantium pariatur ipsam et ipsa vitae, delectus doloremque molestias, ad ratione cum enim dignissimos.</p>
-            </article>
-        </section>
-
-        <section id="lorem_ipsum" class="main-section">
-            <header>
-                <h2>lorem ipsum</h2>
-            </header>
-
-            <article>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nisi iste ipsum ipsa nulla explicabo soluta iusto tempore corporis at?</p>
-                <ul>
-                    <li>Loremm</li>
-                </ul>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi error delectus eum iste nam quaerat id dolorem ipsum illo perferendis repellat eaque vero quod earum rerum atque, doloribus eius adipisci.</p>
-                <code>Lorem, ipsum.
-                Corrupti, iste!</code>
-                <p>Quia, natus ut, quos culpa minima modi esse nobis ipsum ad deserunt cum. Voluptate provident adipisci ducimus odit, nihil eum, quod dolore aspernatur commodi repellat optio labore quis voluptates minus.</p>
-                <code>Lorem ipsum dolor sit.
-                Illum eius tenetur quibusdam!</code>
-            </article>
-        </section>
-
-        <section id="lorem ipsum dolor sit" class="main-section">
-            <header>
-                <h2>lorem ipsum dolor sit</h2>
-            </header>
-
-            <article>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus in nulla nostrum distinctio esse, ut adipisci mollitia nesciunt placeat eligendi, impedit expedita facilis praesentium quas laboriosam aperiam sapiente cum.</p>
-                <code>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, nemo!</code>
-                <code>Lorem ipsum dolor sit.
-                Nemo perferendis dicta consequatur?
-                Debitis, placeat ratione. Iure.
-                Ut quod dolores itaque.
-                Nostrum, quia dolores! Consequatur?
-                Deserunt dolore quod dicta.</code>
-                <p>Eveniet necessitatibus odio facilis accusamus. Blanditiis quaerat, rem quisquam voluptatibus corporis, itaque inventore repudiandae provident aut hic molestias harum labore corrupti quidem accusantium error neque sed deserunt perspiciatis nulla qui.</p>
-            </article>
-        </section>
-
-        <section id="lorem_ipsum_dolor_sit_amet" class="main-section">
-            <header>
-                <h2>lorem ipsum dolor sit amet</h2>
-            </header>
-
-            <article>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corrupti quisquam nobis, earum ratione molestiae veniam ex expedita vitae consequatur laborum molestias quae quia eius blanditiis, cum quaerat reiciendis velit? Distinctio earum eaque, est obcaecati magnam, porro animi quas veniam accusamus saepe voluptate tempore natus sit officia maxime amet ab laboriosam ducimus exercitationem. Corrupti iusto nihil explicabo vitae esse ducimus.</p>
-                <code>Lorem ipsum dolor sit amet consectetur.
-                Pariatur maxime voluptas ut rerum atque.
-                Aut fuga tenetur illum quisquam. Dolore.
-                Quibusdam ratione reiciendis illum recusandae id!
-                Beatae mollitia ratione ea dolor enim.
-                Suscipit sed voluptate ipsa! Sint, repellat?
-                Recusandae perferendis assumenda quam delectus illo.
-                Atque ipsa est distinctio dicta libero!
-                Doloribus obcaecati minima asperiores reprehenderit itaque!
-                Aliquam distinctio autem debitis ea possimus.</code>
-                <p>Sed natus ipsa illum! Itaque cum officia quod facere ad ut quo tempore cumque quidem exercitationem dolores dicta, neque voluptatibus perspiciatis commodi, atque dignissimos illum earum numquam aliquid sit aut!</p>
-            </article>
-        </section>
-
-        <section id="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing" class="main-section">
-            <header>
-                <h2>lorem ipsum dolor sit amet consectetur adipisicing</h2>
-            </header>
-
-            <article>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad sed ullam nihil natus sint! Error quas explicabo nostrum! Pariatur illum, hic dolores minus beatae quam rerum odio eos laudantium. Ipsum id provident placeat, atque, corrupti quaerat, nostrum aliquam consequuntur itaque iure dolore velit consectetur dolorum explicabo excepturi impedit porro voluptate vero nulla laborum ducimus odio dolores quas. Pariatur inventore nobis cum laborum temporibus tenetur, eligendi perspiciatis quod dolorem vitae voluptatem necessitatibus porro magnam eius eveniet quam. Recusandae quasi ipsam itaque doloribus quam cupiditate ut architecto deleniti, quas asperiores. Sunt assumenda ut voluptate quia nam esse expedita doloribus ab incidunt, iure repellendus in vel accusamus itaque. Ipsum totam, debitis facere, animi incidunt possimus maxime non, unde nesciunt eligendi doloribus magni quae ipsa numquam ea vero commodi minima provident sapiente iure eius suscipit itaque illum! Enim officiis odit facilis blanditiis labore eveniet ut veniam quisquam et ullam repellat nihil dolores totam tempore nemo aliquid quasi nam impedit natus optio inventore sint exercitationem, necessitatibus quis. Pariatur dolore reiciendis ad, consequuntur magnam quis optio minus. Dicta atque et iste minus? Libero in deleniti quae laborum tempore odit voluptatem nulla vel dolor voluptatum, porro sequi!</p>
-            </article>
-        </section>
-
-    </main>
+            <ul>
+                <li><a class="nav-link" href="#lorem_ipsum_dolor">lorem ipsum dolor</a></li>
+                <li><a class="nav-link" href="#lorem_ipsum">lorem ipsum</a></li>
+                <li><a class="nav-link" href="#lorem_ipsum_dolor_sit">lorem ipsum dolor sit</a></li>
+                <li><a class="nav-link" href="#lorem_ipsum_dolor_sit_amet">lorem ipsum dolor sit amet </a></li>
+                <li><a class="nav-link" href="#lorem_ipsum_dolor_sit_amet_consectetur_adipisicing">lorem ipsum dolor sit amet consectetur adipisicing</a></li>
+            </ul>
+        </nav>
+        <main id="main-doc">
+            <section id="lorem_ipsum_dolor" class="main-section">
+                <header>
+                    <h2>lorem ipsum dolor</h2>
+                </header>
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, corrupti excepturi. Consequuntur, natus? Explicabo, vitae placeat. Laudantium, ut assumenda eum molestiae nostrum voluptas iure voluptates odit. Voluptates blanditiis facilis illum.</p>
+                    <p>A ipsa enim facere cum quasi dignissimos! Rerum consequatur corrupti porro unde atque fugit repellendus veniam accusantium pariatur ipsam et ipsa vitae, delectus doloremque molestias, ad ratione cum enim dignissimos.</p>
+                </article>
+            </section>
+            <section id="lorem_ipsum" class="main-section">
+                <header>
+                    <h2>lorem ipsum</h2>
+                </header>
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo nisi iste ipsum ipsa nulla explicabo soluta iusto tempore corporis at?</p>
+                    <ul>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                        <li>Lorem</li>
+                    </ul>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eligendi error delectus eum iste nam quaerat id dolorem ipsum illo perferendis repellat eaque vero quod earum rerum atque, doloribus eius adipisci.</p>
+                    <pre>
+                        <code>Lorem, ipsum.
+                        Corrupti, iste!</code>
+                    </pre>
+                    <p>Quia, natus ut, quos culpa minima modi esse nobis ipsum ad deserunt cum. Voluptate provident adipisci ducimus odit, nihil eum, quod dolore aspernatur commodi repellat optio labore quis voluptates minus.</p>
+                    <code>Lorem ipsum dolor sit.
+                    Illum eius tenetur quibusdam!</code>
+                </article>
+            </section>
+            <section id="lorem_ipsum_dolor_sit" class="main-section">
+                <header>
+                    <h2>lorem ipsum dolor sit</h2>
+                </header>
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat ducimus in nulla nostrum distinctio esse, ut adipisci mollitia nesciunt placeat eligendi, impedit expedita facilis praesentium quas laboriosam aperiam sapiente cum.</p>
+                    <pre>
+                        <code>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto, nemo!</code>
+                    </pre>
+                    <pre>
+                        <code>Lorem ipsum dolor sit.
+                        Nemo perferendis dicta consequatur?
+                        Debitis, placeat ratione. Iure.
+                        Ut quod dolores itaque.
+                        Nostrum, quia dolores! Consequatur?
+                    </pre>
+                    Deserunt dolore quod dicta.</code>
+                    <p>Eveniet necessitatibus odio facilis accusamus. Blanditiis quaerat, rem quisquam voluptatibus corporis, itaque inventore repudiandae provident aut hic molestias harum labore corrupti quidem accusantium error neque sed deserunt perspiciatis nulla qui.</p>
+                </article>
+            </section>
+            <section id="lorem_ipsum_dolor_sit_amet" class="main-section">
+                <header>
+                    <h2>lorem ipsum dolor sit amet</h2>
+                </header>
+                <article>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error corrupti quisquam nobis, earum ratione molestiae veniam ex expedita vitae consequatur laborum molestias quae quia eius blanditiis, cum quaerat reiciendis velit? Distinctio earum eaque, est obcaecati magnam, porro animi quas veniam accusamus saepe voluptate tempore natus sit officia maxime amet ab laboriosam ducimus exercitationem. Corrupti iusto nihil explicabo vitae esse ducimus.</p>
+                    <pre>
+                        <code>Lorem ipsum dolor sit amet consectetur.
+                        Pariatur maxime voluptas ut rerum atque.
+                        Aut fuga tenetur illum quisquam. Dolore.
+                        Quibusdam ratione reiciendis illum recusandae id!
+                        Beatae mollitia ratione ea dolor enim.
+                        Suscipit sed voluptate ipsa! Sint, repellat?
+                        Recusandae perferendis assumenda quam delectus illo.
+                        Atque ipsa est distinctio dicta libero!
+                        Doloribus obcaecati minima asperiores reprehenderit itaque!
+                        Aliquam distinctio autem debitis ea possimus.</code>
+                    </pre>
+                    <p>Sed natus ipsa illum! Itaque cum officia quod facere ad ut quo tempore cumque quidem exercitationem dolores dicta, neque voluptatibus perspiciatis commodi, atque dignissimos illum earum numquam aliquid sit aut!</p>
+                </article>
+            </section>
+            <section id="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing" class="main-section">
+                <header>
+                    <h2>lorem ipsum dolor sit amet consectetur adipisicing</h2>
+                </header>
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad sed ullam nihil natus sint! Error quas explicabo nostrum! Pariatur illum, hic dolores minus beatae quam rerum odio eos laudantium. Ipsum id provident placeat, atque, corrupti quaerat, nostrum aliquam consequuntur itaque iure dolore velit consectetur dolorum explicabo excepturi impedit porro voluptate vero nulla laborum ducimus odio dolores quas. Pariatur inventore nobis cum laborum temporibus tenetur, eligendi perspiciatis quod dolorem vitae voluptatem necessitatibus porro magnam eius eveniet quam. Recusandae quasi ipsam itaque doloribus quam cupiditate ut architecto deleniti, quas asperiores. Sunt assumenda ut voluptate quia nam esse expedita doloribus ab incidunt, iure repellendus in vel accusamus itaque. Ipsum totam, debitis facere, animi incidunt possimus maxime non, unde nesciunt eligendi doloribus magni quae ipsa numquam ea vero commodi minima provident sapiente iure eius suscipit itaque illum! Enim officiis odit facilis blanditiis labore eveniet ut veniam quisquam et ullam repellat nihil dolores totam tempore nemo aliquid quasi nam impedit natus optio inventore sint exercitationem, necessitatibus quis. Pariatur dolore reiciendis ad, consequuntur magnam quis optio minus. Dicta atque et iste minus? Libero in deleniti quae laborum tempore odit voluptatem nulla vel dolor voluptatum, porro sequi!</p>
+                </article>
+            </section>
+        </main>
+    </div>
     
+    <footer class="attribution-container">
+        Leo Thomas Monteiro, 2021.
+    </footer>
 </body>
 </html>
