--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -97,13 +97,13 @@
                     <h4>Technical Documentation</h4>
                 </header>
                 <p class="quest"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a technical documentation page that has <a href="https://codepen.io/freeCodeCamp/full/NdrKKL">this</a> functionality.</p>
-                <nav>
+                <nav class="nav">
                     <ul class="main-link">
-                        <li><a href="#"><i class="fas fa-globe"></i> Live</a></li>
+                        <li><a href="responsive-web-design/technical-doc-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
                     </ul>
                     <ul class="secondary-link">
-                        <li><a href="#"><i class="fas fa-code"></i> Source</a></li>
-                        <li><a href="#"><i class="fas fa-lightbulb"></i> Notes</a></li>
+                        <li><a href="https://github.com/anotherleo/leo-projects/tree/main/studies/freecodecamp/responsive-web-design/technical-doc-page"><i class="fas fa-code" aria-hidden="true"></i> Source</a></li>
+                        <li><a href="responsive-web-design/technical-doc-page/notes.md" aria-hidden="true"><i class="fas fa-lightbulb"></i> Notes</a></li>
                     </ul>
                 </nav>
             </article>
