--- a/projects/originals/storytelling-based-game/test-05/index.html
+++ b/projects/originals/storytelling-based-game/test-05/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="assets/css/style-event.css">
     <link rel="stylesheet" href="assets/css/style-storyline.css">
 
-    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous" defer></script>
 
     <title>A Storytelling Concept</title>
 </head>
