--- a/studies/freecodecamp/index.html
+++ b/studies/freecodecamp/index.html
@@ -96,7 +96,8 @@
                 <header>
                     <h4>Technical Documentation</h4>
                 </header>
-                <p class="quest"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a technical documentation page that has <a href="https://codepen.io/freeCodeCamp/full/NdrKKL">this</a> functionality.</p>
+                <p class="quest-done"><i class="fas fa-exclamation-circle" aria-hidden="true"></i>&nbsp;Quest<br>Build a technical documentation page that has <a href="https://codepen.io/freeCodeCamp/full/NdrKKL">this</a> functionality.</p>
+                <p><i class="fas fa-check-circle" aria-hidden="true"></i>&nbsp;Result<br>A simple boilerplate for technical documentation.</p>
                 <nav class="nav">
                     <ul class="main-link">
                         <li><a href="responsive-web-design/technical-doc-page/index.html"><i class="fas fa-globe" aria-hidden="true"></i> Live</a></li>
