--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <style>
-        body {font-family: sans-serif; text-align: center}
+        body {font-family: sans-serif; text-align: center; min-height: 90vh; display: flex; flex-flow: column wrap; justify-content: center;}
         ul {padding: 0;}
         li {list-style-type: none;}
         a {text-decoration: none;}
