--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
 
     <nav>
         <ul>
-            <li><a href="projects/originals/storytelling-based-game/test-05/index.html">Project: Storytelling Based Game</a></li>
-            <li><a href="studies/freecodecamp/index.html">Studies: FreeCodeCamp</a></li>
-            <li><a href="studies/traversy-50days-js-course/index.html">Studies: Traversy 50 Days of JS Projects</a></li>
+
+            <li>
+                <a href="projects/originals/storytelling-based-game/test-05/index.html">Project: Storytelling Based Game</a>
+            </li>
+            <li>
+                <a href="studies/freecodecamp/index.html">Studies: FreeCodeCamp</a>
+            </li>
+            <li>
+                <a href="studies/traversy-50days-js-course/index.html">Studies: Traversy 50 Days of JS Projects</a>
+            </li>
+            <li>
+                <a href="studies/frontend-mentor/index.html">Studies: Frontend Mentor Projects</a>
+            </li>
         </ul>
     </nav>
 </body>
