--- a/studies/frontend-mentor/index.html
+++ b/studies/frontend-mentor/index.html
@@ -9,9 +9,9 @@
     <meta name="keywords"
         content="Leo Thomas Monteiro, frontend mentor, frontened mentor solutions, css, html5, programming, infosec, anotherleo, @anotherleo, @neo.punk, @leothomas.js">
 
-    <link rel="stylesheet" type="text/css" href="style-pallete.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="style-background.css">
+    <link rel="stylesheet" type="text/css" href="assets/style-pallete.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style-background.css">
 
     <link rel="icon" type="image/ico" sizes="32x32" href="favicon-32x32.ico">
 
@@ -36,7 +36,7 @@
         <article class="project__card">
             <img>
             <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
+            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
                 <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
@@ -44,7 +44,7 @@
         <article class="project__card">
             <img>
             <h3>Profile Card Component</h3>
-            <a class="project__button" href="002-profile-card-component-main/index.html">
+            <a class="project__button" href="projects/002-profile-card-component-main/index.html">
                 <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
@@ -52,7 +52,7 @@
         <article class="project__card">
             <img>
             <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
+            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
                 <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
@@ -60,7 +60,7 @@
         <article class="project__card">
             <img>
             <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
+            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
                 <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
