--- a/projects/dnd-red-horizons/index.html
+++ b/projects/dnd-red-horizons/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Document</title>
+    <link rel="stylesheet" href="assets/css/main.css">
+
+    <title>Red Horizons | D&D Homebrew Scenario</title>
 
 </head>
 <body>
+
+    <header id="header" class="page__header">
+        <div class="header__titles">
+            <h1>Red Horizons</h1>
+            <h2>D&D 5e Homebrew Scenario</h2>
+     </header>
+
+     <main>
+        <div class="page__navbars">
+            <nav id="nav-desktop">
+                <ul>
+                    <li>Cenário</li>
+                    <li>Cidades</li>
+                    <li>Divindades</li>
+                    <li>Heróis</li>
+                    <li>Monstros</li>
+                    <li>Livros</li>
+                    <li>Autor</li>
+                </ul>
+            </nav>
+
+            <nav id="nav-mobile">
+
+            </nav>
+        </div>
+
+         <section class="page__welcome">
+            <h1>O mundo resiste depois da Guerra...</h1>
+         </section>
+     </main>
+
+     <footer>
+        <a href="#header">UP</a>
+        <h1>2021 &copy; Leo Thomas Monteiro.</h1>
+        <h1>Image credits: Fire and death, by <a href="https://www.deviantart.com/istrandar">Istrandar</a>.
+     </footer>
 
 </body>
 </html>
