--- a/studies/frontend-mentor/index.html
+++ b/studies/frontend-mentor/index.html
@@ -32,7 +32,7 @@
     </header>
 
     <section class="project">
-    
+
         <article class="project__card">
             <img>
             <h3>Stats Preview Card Component</h3>
@@ -51,16 +51,8 @@
 
         <article class="project__card">
             <img>
-            <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
-                <i class="fas fa-globe"></i> VISIT
-            </a>
-        </article>
-
-        <article class="project__card">
-            <img>
-            <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
+            <h3>Blogr Landing Page</h3>
+            <a class="project__button" href="projects/003-blogr-landing-page-main/index.html">
                 <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
@@ -72,7 +64,7 @@
             <img class="attribution__cc__img" alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png">
         </a>
         <h5 class="attribution__header">&copy; Leo Thomas Monteiro, 2021.</h5>
-        
+
         <nav>
             <a class="attribution__button" href="https://anotherleo.github.io">
                 <i class="fas fa-globe-americas"></i>
