1st draft of leo's web dev seniority project

--- a/js-toybox/leo-seniority/index.html
+++ b/js-toybox/leo-seniority/index.html
@@ -37,7 +37,7 @@
                 <div class="col-md-12">
                     <form action="#" class="row">
                         <div class="col-md-2 skill__status--wrapper">
-                            <img src="https://different-marmoset-f7b.notion.site/image/https%3A%2F%2Fs3-us-west-2.amazonaws.com%2Fsecure.notion-static.com%2F60eda68a-a86c-4327-9e08-797187511df6%2Fhtml_(1).png?table=block&id=a74f32ed-5230-4a3d-a5f7-83ada52ba806&spaceId=a10d5439-ecf5-4fcd-9ead-c11a466086e4&width=2000&userId=&cache=v2" alt="" class="img-fluid">
+                            <img src="assets/img/icons/icon-html-c.png" alt="" class="skill__image">
                             <h5 class="skill__status__name">Steps</h5>
                             <progress id="js-skill-html-meter" value="0" max="0"></progress>
                             <span id="js-skill-html-number">
