leo's web dev -- higher tier sample

--- a/js-toybox/leo-seniority/index.html
+++ b/js-toybox/leo-seniority/index.html
@@ -50,6 +50,7 @@
                     <h2>HTML</h2>
                 </div>
             </div>
+
             <div class="row">
                 <div class="col-md-12">
                     <form action="#" class="row">
@@ -63,16 +64,23 @@
                                 <span id="js-skill-html-number">
                                 </span>
                             </div>
+
+                            <div class="progress__report">
+                                <h5 class="skill__status__name title--small-impact">📈 Higher Tier</h5>
+                                <progress id="js-skill-html-meter-high" value="0" max="0"></progress>
+                                <span id="js-skill-html-number-high">
+                                </span>
+                            </div>
                         </div>
 
                         <div class="col-md-10">
-                            <ul id="js-skill-html-checklist">
-                                <li id="select" class="checklist">
+                            <ul id="js-skill-html-checklist" class="skill__checklist">
+                                <li>
                                     <input type="checkbox" id="html1" name="html1"
                                     checked>
                                     <label for="html1">Non-semantic elements</label>
                                 </li>
-                                <li class="checklist">
+                                <li>
                                     <input type="checkbox" id="html2" name="html2"
                                     checked>
                                     <label for="html2">Semantic elements</label>
@@ -91,9 +99,9 @@
                                     <input type="checkbox" id="html5" name="html5">
                                     <label for="html5">Accessible HTML (well-understood by screen readers)</label>
                                 </li>
-                                <li>
+                                <li class="js-high skill__up">
                                     <input type="checkbox" id="html6" name="html6">
-                                    <label for="html6">SVG basics</label>
+                                    <label for="html6">📈 SVG basics</label>
                                 </li>
                             </ul>
                         </div>
