still with a bug in the higher counter

--- a/js-toybox/leo-seniority/index.html
+++ b/js-toybox/leo-seniority/index.html
@@ -55,7 +55,7 @@
                 <div class="col-md-12">
                     <form action="#" class="row">
 
-                        <div class="col-md-2 skill__status--wrapper">
+                        <aside class="col-md-2 skill__status--wrapper">
                             <img src="assets/img/icons/icon-html-c.png" alt="ícone html">
 
                             <div class="progress__report">
@@ -71,7 +71,7 @@
                                 <span id="js-skill-html-number-high">
                                 </span>
                             </div>
-                        </div>
+                        </aside>
 
                         <div class="col-md-10">
                             <ul id="js-skill-html-checklist" class="skill__checklist">
@@ -100,7 +100,7 @@
                                     <label for="html5">Accessible HTML (well-understood by screen readers)</label>
                                 </li>
                                 <li class="js-high skill__up">
-                                    <input type="checkbox" id="html6" name="html6">
+                                    <input type="checkbox" id="html6" name="html6" class="js-advance" checked>
                                     <label for="html6">📈 SVG basics</label>
                                 </li>
                             </ul>
@@ -117,6 +117,89 @@
             <div class="row">
                 <div class="col-md-12 skill__name">
                     <h2>CSS</h2>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-12">
+                    <form action="" class="row">
+
+                        <aside class="col-md-2 skill__status--wrapper">
+                            <img src="assets/img/icons/icon-css-c.png" alt="ícone css">
+
+                            <div class="progress__report">
+                                <h5 class="skill__status__name title--small-impact">Overall Steps</h5>
+                                <progress id="js-skill-css-meter" value="0" max="0"></progress>
+                                <span id="js-skill-css-number">
+                                </span>
+                            </div>
+
+                            <div class="progress__report">
+                                <h5 class="skill__status__name title--small-impact">📈 Higher Tier</h5>
+                                <progress id="js-skill-css-meter-high" value="0" max="0"></progress>
+                                <span id="js-skill-css-number-high">
+                                </span>
+                            </div>
+                        </aside>
+
+                        <div class="col-md-10">
+                            <ul id="js-skill-css-checklist" class="skill__checklist">
+                                <li>
+                                    <input type="checkbox" id="css1" name="css1" checked>
+                                    <label for="css1">The box model</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css2" name="css2" checked>
+                                    <label for="css2">Display value types (block, inline-block, inline, flex)</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css3" name="css3" checked>
+                                    <label for="css3">Positioning (static, absolute, fixed, relative)</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css4" name="css4" checked>
+                                    <label for="css4">Selectors (a, .component, .component > a)</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css5" name="css5" checked>
+                                    <label for="css5">Pseudo-classes (:hover, :active)</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css6" name="css6" checked>
+                                    <label for="css6">Specificity, !important (and when to use !important responsibly)</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css7" name="css7" checked>
+                                    <label for="css7">Responsive web design (@media queries, relative units like em, mobile-first design philosophy)</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="css8" name="css8" checked>
+                                    <label for="css8">Default stylesheet and reset.css</label>
+                                </li>
+                                <li class="js-high skill__up">
+                                    <input type="checkbox" id="css" name="css">
+                                    <label for="">📈 Animation basics (@keyframes)</label>
+                                </li>       
+                                <li class="js-high skill__up">
+                                    <input type="checkbox" id="css" name="css" checked>
+                                    <label for="">📈 Understanding of CSS frameworks and their trade-offs (experience with one preferred)</label>
+                                </li>
+                                <li class="js-high skill__up">
+                                    <input type="checkbox" id="css" name="css">
+                                    <label for="">📈 Understanding of Sass (mixins, loops, conditions, functions)</label>
+                                </li>
+                                <li class="js-high skill__up">
+                                    <input type="checkbox" id="css" name="css" checked>
+                                    <label for="">📈 Understanding of BEM methodology</label>
+                                </li>
+                                <li class="js-high skill__up">
+                                    <input type="checkbox" id="css" name="css" checked>
+                                    <label for="">📈 Grid display</label>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </form>
                 </div>
             </div>
         </div>
