seniority project update

--- a/js-toybox/leo-seniority/index.html
+++ b/js-toybox/leo-seniority/index.html
@@ -177,24 +177,24 @@
                                     <label for="css8">Default stylesheet and reset.css</label>
                                 </li>
                                 <li class="js-high skill__up">
-                                    <input type="checkbox" id="css" name="css">
-                                    <label for="">📈 Animation basics (@keyframes)</label>
+                                    <input type="checkbox" id="css9" name="css9" class="js-advance" >
+                                    <label for="css9">📈 Animation basics (@keyframes)</label>
                                 </li>       
                                 <li class="js-high skill__up">
-                                    <input type="checkbox" id="css" name="css" checked>
-                                    <label for="">📈 Understanding of CSS frameworks and their trade-offs (experience with one preferred)</label>
+                                    <input type="checkbox" id="css10" name="css10" class="js-advance" checked>
+                                    <label for="css10">📈 Understanding of CSS frameworks and their trade-offs (experience with one preferred)</label>
                                 </li>
                                 <li class="js-high skill__up">
-                                    <input type="checkbox" id="css" name="css">
-                                    <label for="">📈 Understanding of Sass (mixins, loops, conditions, functions)</label>
+                                    <input type="checkbox" id="css11" name="css11" class="js-advance" >
+                                    <label for="css11">📈 Understanding of Sass (mixins, loops, conditions, functions)</label>
                                 </li>
                                 <li class="js-high skill__up">
-                                    <input type="checkbox" id="css" name="css" checked>
-                                    <label for="">📈 Understanding of BEM methodology</label>
+                                    <input type="checkbox" id="css12" name="css12" class="js-advance" checked>
+                                    <label for="css12">📈 Understanding of BEM methodology</label>
                                 </li>
                                 <li class="js-high skill__up">
-                                    <input type="checkbox" id="css" name="css" checked>
-                                    <label for="">📈 Grid display</label>
+                                    <input type="checkbox" id="css13" name="css13" class="js-advance" checked>
+                                    <label for="css13">📈 Grid display</label>
                                 </li>
                             </ul>
                         </div>
@@ -210,6 +210,48 @@
             <div class="row">
                 <div class="col-md-12 skill__name">
                     <h2>JavaScript</h2>
+                </div>
+            </div>
+        
+
+            <div class="row">
+                <div class="col-md-12">
+                    <form action="" class="row">
+                        <aside class="col-md-2 skill__status--wrapper">
+                            <img src="assets/img/icons/icon-js-c.png" alt="ícone css">
+
+                            <div class="progress__report">
+                                <h5 class="skill__status__name title--small-impact">Overall Steps</h5>
+                                <progress id="js-skill-js-meter" value="0" max="0"></progress>
+                                <span id="js-skill-js-number">
+                                </span>
+                            </div>
+
+                            <div class="progress__report">
+                                <h5 class="skill__status__name title--small-impact">📈 Higher Tier</h5>
+                                <progress id="js-skill-js-meter-high" value="0" max="0"></progress>
+                                <span id="js-skill-js-number-high">
+                                </span>
+                            </div>
+                        </aside>
+
+                        <div class="col-md-10">
+                            <ul id="js-skill-js-checklist" class="skill__checklist">
+                                <li>
+                                    <input type="checkbox" id="js1" name="js1" checked>
+                                    <label for="js1">Functions</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="js2" name="js2" checked>
+                                    <label for="js2">Pass by value vs. pass by reference</label>
+                                </li>
+                                <li>
+                                    <input type="checkbox" id="js3" name="js3" checked>
+                                    <label for="js3">Values, types, and basic operators (arithmetic, assignment, comparison)</label>
+                                </li>
+                            </ul>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -296,7 +338,7 @@
     </section>
     
     <footer>
-
+        <p>Leo Thomas Monteiro, 2021.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
