--- a/studies-v2/site01/backup/v01/index.html
+++ b/studies-v2/site01/backup/v01/index.html
@@ -10,28 +10,24 @@
 
 <body>
     <header class="page__header">
-        <div class="header__upper">
-            <em>In the beginning there was chaos.</em>
-            <p lang="el">Ή τοι μεν πρώτιστα Χάος γένετο.</p>
-        </div>
-        <div class="header__banner">
-            <!-- <div class="header__logo">
-                <a href="index.html">
-                    <img src="assets/img/logo.png" alt="logotipo">
-                </a>
-            </div> -->
-            <div class="header__title">
-                <h1 class="title__headline">Era uma casa muito engraçada...</h1>
-                <h2>Havia caos. Caos completo.</h2>
-                <!-- <h3 class="title__info">Fatos baseados na vida e em narrativas do TRPG Mago a Ascensão.</h3> -->
-            </div>
-        </div>
         <nav class="header__nav">
             <a href="#">Personagens</a>
             <a href="#">Cenário</a>
             <a href="#">Crônicas</a>
             <a href="#">Sistema</a>
         </nav>
+        <div class="header__banner">
+            <div class="header__logo">
+                <a href="index.html">
+                    <img src="assets/img/logo.png" alt="logotipo">
+                </a>
+            </div>
+            <div class="header__title">
+                <h1 class="title__headline">Era uma casa muito engraçada...</h1>
+                <h2>Havia caos. Caos completo.</h2>
+                <h3 class="title__info">Fatos baseados na vida e em narrativas do TRPG Mago a Ascensão.</h3>
+            </div>
+        </div>        
     </header>
     
     <main class="page__main">
