--- a/studies/book-beginning-svg/01/various-circles.html
+++ b/studies/book-beginning-svg/01/various-circles.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        svg {border: 1px solid black;}
+    </style>
 </head>
 <body>
     <h1>Leo's Practice: Various Circles With SVG</h1>
