--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,59 +18,21 @@
 <body>
 
     <div class="container">
-
         <header class="page__header">
-            <h1>Leo's proJEcts</h1>
-            <h2>fRoNt-End weB devELoPer</h2>
-
-            <nav>
-                <a href="#" role="button">
-                    <span>Navbar </span>
-                    <i class="fa-solid fa-bars"></i>
-                </a>
-            </nav>
+            <h1 title="Leo's Projects">Leo's proJEcts</h1>
+            <h2 title="Front-End Web Developer">fRoNt-End weB devELoPer</h2>
         </header>
 
         <section class="page__projects">
             <header>
-                <h2>Something Like a Portfolio</h2>
+                <h2 lang="en">Something Like a Portfolio</h2>
             </header>
             <nav>
-                <a href="#" target="_blank">
-                    <span class="category">Work</span>
-                    <span class="title">Projects Built at LDNA's</span>
-                </a>
-                <a href="studies/frontend-mentor/index.html" target="_blank">
-                    <span class="category">Showcase</span>
-                    <span class="title">Frontend Mentor Projects</span>
-                </a>
-                <a href="studies/traversy-50days-js-course/index.html" target="_blank">
-                    <span class="category">Practice</span>
-                    <span class="title">Traversy's 50 Days of JS</span>
+                <a href="https://anotherleo.github.io">
+                    <span class="category" lang="en">PERSONAL WEBSITE</span>
+                    <span class="title">LEO THOMAS MONTEIRO</span>
                 </a>
             </nav>
-        </section>
-
-        <section class="page__projects">
-            <header>
-                <h2>Things I Enjoy to Study</h2>
-            </header>
-            <nav>
-                <a href="studies/freecodecamp/index.html" target="_blank">
-                    <span class="category">Showcase</span>
-                    <span class="title">FreeCodeCamp Projects</span>
-                </a>
-                <a href="projects/experimental/storytelling-based-game/test-05/index.html" target="_blank">
-                    <span class="category">Experimental</span>
-                    <span class="title">Storytelling Based Game</span>
-                </a>
-            </nav>
-        </section>
-
-        <section class="page__next">
-            <a href="assets/pages/about.html">
-                Want to know about me? Next Page <i class="fa-solid fa-chevron-right"></i>
-            </a>
         </section>
 
         <footer class="page__footer">
