--- a/studies/book-beginning-svg/02/squares.html
+++ b/studies/book-beginning-svg/02/squares.html
@@ -13,8 +13,8 @@
         <rect x="10" y="10" width="100" height="100" stroke="darkgray" stroke-width="5" fill="transparent" />
     </svg>
     <span>Adding a Rectangle</span>
-    <svg id="squareID">
-        <rect x="10" y="10" width="100" height="100" stroke="darkgray" stroke-width="5" fill="transparent" />
+    <svg id="rectangleID">
+        <rect x="10" y="10" width="300" height="100" stroke="darkgray" stroke-width="5" fill="transparent" />
     </svg>
 </body>
 </html>
