--- a/studies/frontend-mentor/old/index.html
+++ b/studies/frontend-mentor/old/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Leo Thomas Monteiro">
-    <meta name="description" content="Front">
+    <meta name="description" content="Repository of personal solutions for frontendmentor.io challenges.">
     <meta name="keywords"
         content="Leo Thomas Monteiro, frontend mentor, frontened mentor solutions, css, html5, programming, infosec, anotherleo, @anotherleo, @neo.punk, @leothomas.js">
 
-    <link rel="stylesheet" type="text/css" href="style-pallete.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="style-background.css">
-    <link rel="icon" type="image/svg" sizes="32x32" href="favicon.svg">
-    <link rel=”mask-icon” href=”mask-icon.svg” color=”#000000">
+    <link rel="stylesheet" type="text/css" href="assets/style-pallete.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style-background.css">
+
+    <link rel="icon" type="image/ico" sizes="32x32" href="favicon-32x32.ico">
 
     <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
 
@@ -32,44 +32,39 @@
     </header>
 
     <section class="project">
-    
+
         <article class="project__card">
             <img>
             <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
-                <i class="fas fa-globe"></i> HOME
+            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
+                <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
 
         <article class="project__card">
             <img>
-            <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
-                <i class="fas fa-globe"></i> HOME
+            <h3>Profile Card Component</h3>
+            <a class="project__button" href="projects/002-profile-card-component-main/index.html">
+                <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
 
         <article class="project__card">
             <img>
-            <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
-                <i class="fas fa-globe"></i> HOME
-            </a>
-        </article>
-
-        <article class="project__card">
-            <img>
-            <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="001-stats-preview-card-component-main/index.html">
-                <i class="fas fa-globe"></i> HOME
+            <h3>Blogr Landing Page</h3>
+            <a class="project__button" href="projects/003-blogr-landing-page-main/index.html">
+                <i class="fas fa-globe"></i> VISIT
             </a>
         </article>
 
     </section>
 
     <footer class="attribution">
+        <a class="attribution__cc" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+            <img class="attribution__cc__img" alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png">
+        </a>
         <h5 class="attribution__header">&copy; Leo Thomas Monteiro, 2021.</h5>
-        
+
         <nav>
             <a class="attribution__button" href="https://anotherleo.github.io">
                 <i class="fas fa-globe-americas"></i>
