--- a/studies/frontend-mentor/projects/001-stats-preview-card-component-main/index.html
+++ b/studies/frontend-mentor/projects/001-stats-preview-card-component-main/index.html
@@ -43,9 +43,8 @@
     <div class="attribution">
       <p>
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noreferrer noopener">Frontend Mentor</a>.
-        Coded by <a href="https://www.linkedin.com/in/leosmonteiro/">Leo Thomas Monteiro</a>.
+        Coded by <a href="https://anotherleo.github.io/">Leo Thomas Monteiro</a>.
       </p>
-      <p>See all of <a href="../index.html">Leo's Frontend Mentor Exercises Solutions</a>.</p>
     </div>
   </footer>
 </body>
