--- a/studies/frontend-mentor/index.html
+++ b/studies/frontend-mentor/index.html
@@ -1,82 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" prefix="og: https://ogp.me/ns#">
 <head>
+    <!-- global -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Leo Thomas Monteiro">
-    <meta name="description" content="Repository of personal solutions for frontendmentor.io challenges.">
-    <meta name="keywords"
-        content="Leo Thomas Monteiro, frontend mentor, frontened mentor solutions, css, html5, programming, infosec, anotherleo, @anotherleo, @neo.punk, @leothomas.js">
 
-    <link rel="stylesheet" type="text/css" href="assets/style-pallete.css">
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
-    <link rel="stylesheet" type="text/css" href="assets/style-background.css">
+    <!-- title -->
+    <title>Leo Thomas | Web Dev</title>
 
-    <link rel="icon" type="image/ico" sizes="32x32" href="favicon-32x32.ico">
+    <!-- SEO I -->
+    
+    <!-- SEO II | Open Graph -->
 
-    <script src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
+    <!-- SEO II | Twitter Cards -->    
+    
+    <!-- SEO III -->
+    <meta name="robots" content="index, follow">
+    <meta name="googlebot" content="notranslate">
 
-    <title>Leo's Frontend Mentor Exercises Solutions</title>
+    <!-- favicons & theme -->
+    <meta name="theme-color" content="#000000">
+
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="libs/owl.carousel.min.css">
+    <link rel="stylesheet" href="libs/owl.theme.default.min.css">
+    <link rel="stylesheet" href="main.css">
+
+    <!-- SEO IV | Schema & Google -->
+    <script type="application/ld+json">
+    </script>
+
+    <!-- deferred scripts -->
+    <script defer src="https://kit.fontawesome.com/1a415b1d46.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-
-    <header class="top-header">
-        <h2 class="top-header__subtitle">
-            Leo's Exercises Solutions of
-        </h2>
-        <h1 class="top-header__title">
-            Frontend<span>Mentor</span>.io
-        </h1>
+    <header class="page__header">
+        <div class="colored-line"></div>
     </header>
 
-    <section class="project">
+    <main class="container">
+        <section class="row align-items-center justify-content-center p-5 introduction">
+            <div class="col-md-4 intro__text">
+                <h2 class="animate__animated animate__tada">
+                    Soluções do <span>Leo</span>
+                    <br>para desafios do
+                    <br><span>FRONTENDMENTOR.IO</span>
+                </h2>
+                <p>Minhas soluções para desafios do <a href="https://www.frontendmentor.io/">FrontEndMentor.io</a>, com bônus de algumas versões próprias em desafios extras.</p>
+                <a href="#challenges" class="intro__contact">Portfólio</a>
+            </div>
+            <div class="col-md-3 pt-5">
+                <img src="cover.jpeg" alt="retrato de Leo Thomas" class="img-fluid portrait">
+            </div>
+        </section>
+    </main>
 
-        <article class="project__card">
-            <img>
-            <h3>Stats Preview Card Component</h3>
-            <a class="project__button" href="projects/001-stats-preview-card-component-main/index.html">
-                <i class="fas fa-globe"></i> VISIT
-            </a>
-        </article>
-
-        <article class="project__card">
-            <img>
-            <h3>Profile Card Component</h3>
-            <a class="project__button" href="projects/002-profile-card-component-main/index.html">
-                <i class="fas fa-globe"></i> VISIT
-            </a>
-        </article>
-
-        <article class="project__card">
-            <img>
-            <h3>Blogr Landing Page</h3>
-            <a class="project__button" href="projects/003-blogr-landing-page-main/index.html">
-                <i class="fas fa-globe"></i> VISIT
-            </a>
-        </article>
-
+    <section id="challenges" class="challenge-list mb-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12">
+                    <div class="row justify-content-center">
+                        <div class="col-12 mb-2">
+                            <h3>Desafios concluídos</h3>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="001-stats-preview-card-component-main/index.html">
+                                <img src="https://images.unsplash.com/photo-1600880292203-757bb62b4baf?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">01 - STATS PREVIEW CARD COMPONENT</h4>
+                                    <p class="card-text">Componente de apresentação de números e/ou estatísticas de uma empresa.</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="#">
+                                <img src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">02 - PROFILE CARD COMPONENT</h4>
+                                    <p class="card-text">Componente de perfil de usuário.</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-6 col-lg-4 mb-3">
+                            <a class="card challenge__card" href="#">
+                                <img src="https://images.unsplash.com/photo-1518717758536-85ae29035b6d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80" alt="projeto" class="card-img-top img-fluid">
+                                <div class="card-body">
+                                    <h4 class="card-title">03 - BLOGR LANDING PAGE</h4>
+                                    <p class="card-text">Uma landing page fictícia.</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <footer class="attribution">
-        <a class="attribution__cc" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-            <img class="attribution__cc__img" alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png">
-        </a>
-        <h5 class="attribution__header">&copy; Leo Thomas Monteiro, 2021.</h5>
-
-        <nav>
-            <a class="attribution__button" href="https://anotherleo.github.io">
-                <i class="fas fa-globe-americas"></i>
-            </a>
-            <a class="attribution__button" href="https://www.linkedin.com/in/leosmonteiro/">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a class="attribution__button" href="https://github.com/anotherleo">
-                <i class="fab fa-github"></i>
-            </a>
-        </nav>
+    <footer>
+        <div class="container">
+            <p>Leo Thomas Monteiro &copy; 2022.</p>
+        </div>
+        <div class="colored-line"></div>
     </footer>
 
+    <!-- Bootstrap 5.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- owl carousel controls -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="libs/owl.carousel.min.js"></script>
 </body>
-</html>
