--- a/studies/frontend-mentor/index.html
+++ b/studies/frontend-mentor/index.html
@@ -54,7 +54,7 @@
                 <a href="#challenges" class="intro__contact">Portfólio</a>
             </div>
             <div class="col-md-3 pt-5">
-                <img src="cover.jpeg" alt="retrato de Leo Thomas" class="img-fluid portrait">
+                <img src="cover.jpeg" alt="wallpaper" class="img-fluid portrait">
             </div>
         </section>
     </main>
