--- a/studies-v4/01/index.html
+++ b/studies-v4/01/index.html
@@ -17,7 +17,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="p-5">
-                    <h1>ABOUT SECTION</h1>
+                    <h1>Nº1 | ABOUT SECTION</h1>
                     <p>02/08/2022 | Exercício livre.
                         <br>Tipografia: Aqua Grotesque e Noto Sans.</p>
                     <hr>
@@ -38,7 +38,7 @@
                     <div class="col-md-6">
                         <div>
                             <h2 class="pt-5">
-                                FAÇA
+                                BRILHE
                                 <br>DO SEU
                                 <br>MODO.
                             </h2>
